---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2025-12-05
  Features:
    - Added `ThingRegistration.custom_blueprint_geometry` option to specify custom blueprint geometry for Things.
  Changes:
    - Added "Debug: render blueprint bounding boxes" flag to settings.
  Bugfixes:
    - Fixed a rare rounding issue in blueprint bbox computation.
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2025-11-23
  Bugfixes:
    - Fixed crash in undo/redo relating to missing surface indexes.
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2025-10-30
  Bugfixes:
    - Fixed a performance issue involving degenerately large undo/redo items causing lag spikes on construction events.
    - Fixed an issue where `on_orientation_changed` wasn't firing properly.
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2025-10-28
  Features:
    - Added preliminary support for entity settings copy/paste. Copy/paste will now correctly move tags between Things of the same name.
    - Added new concept of transient children, children that aren't themselves Things, but are associated with a Thing and destroyed alongside it.
    - Added API `things.add_transient_child`
    - Added API `things.remove_transient_child`
    - Added API `things.get_transient_child`
    - Added API `things.get_transient_children`
    - Added `cause` field to `things.EventData.on_tags_changed` to indicate whether the tag change was triggered by the API or the engine.
    - Added API `things.merge_tags`
    - Added API `things.set_tag`
    - API `things.create_thing` now accepts an optional `tags` parameter to set initial tags on the created Thing.
    - Added API `things.get_thing_id`