@@ -1,10 +1,12 @@
 [mod-setting-name]
 things-setting-debug=Debug mode
 things-setting-debug-render-blueprint-bboxes=Debug: render blueprint bounding boxes
+things-setting-debug-calc-unthing-blueprints=Debug: calculate geometry for blueprints with no Things
 
 [mod-setting-description]
 things-setting-debug=Enable debug mode. This will draw information on the map about the state of Things, as well as enabling various internal logging and tracing. This can help diagnose problems, but will negatively impact performance.
 things-setting-debug-render-blueprint-bboxes=When enabled, the bounding boxes of blueprints will be rendered on the map for debugging purposes. This can help diagnose issues with blueprint geometry.
+things-setting-debug-calc-unthing-blueprints=When enabled, the geometry for blueprints will always be calculated even if they contain no Things. This can help diagnose issues with blueprint geometry.
 
 [things-messages]
 duplicate-ghost-warning=Warning: Duplicate ghost detected at world key '__1__'. This ghost is already mapped to (__2__,__3__), but something is remapping it to (__4__,__5__). This indicates a bug in one of the two mods that created these ghosts, or a bug in Things itself. Please report this to the mod authors.
