@@ -17,4 +17,11 @@ data:extend({
 		setting_type = "runtime-global",
 		default_value = false,
 	},
+	{
+		type = "bool-setting",
+		name = "things-setting-debug-calc-unthing-blueprints",
+		order = "ac",
+		setting_type = "runtime-global",
+		default_value = false,
+	},
 })
